--- a/.obsidian/app.json
+++ b/.obsidian/app.json
@@ -1,5 +1,6 @@
 {
   "readableLineLength": false,
   "propertiesInDocument": "source",
-  "vimMode": true
+  "vimMode": true,
+  "showLineNumber": true
 }
